; ModuleID = '/home/carl/AnghaBench/linux/arch/powerpc/sysdev/extr_fsl_rcpm.c_rcpm_v1_irq_mask.c'
source_filename = "/home/carl/AnghaBench/linux/arch/powerpc/sysdev/extr_fsl_rcpm.c_rcpm_v1_irq_mask.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32, i32, i32 }

@rcpm_v1_regs = common dso_local global %struct.TYPE_2__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @rcpm_v1_irq_mask to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rcpm_v1_irq_mask(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = call i32 @get_hard_smp_processor_id(i32 %5)
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* %3, align 4
  %8 = shl i32 1, %7
  store i32 %8, i32* %4, align 4
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** @rcpm_v1_regs, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 3
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @setbits32(i32* %10, i32 %11)
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** @rcpm_v1_regs, align 8
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 2
  %15 = load i32, i32* %4, align 4
  %16 = call i32 @setbits32(i32* %14, i32 %15)
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** @rcpm_v1_regs, align 8
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 1
  %19 = load i32, i32* %4, align 4
  %20 = call i32 @setbits32(i32* %18, i32 %19)
  %21 = load %struct.TYPE_2__*, %struct.TYPE_2__** @rcpm_v1_regs, align 8
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 0
  %23 = load i32, i32* %4, align 4
  %24 = call i32 @setbits32(i32* %22, i32 %23)
  ret void
}

declare dso_local i32 @get_hard_smp_processor_id(i32) #1

declare dso_local i32 @setbits32(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
